force-app/main/default/objects/Policy_Lawyer__c/Policy_Lawyer__c.object-meta.xml
<CustomObject>
    <label>Policy Lawyer</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Lawyers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>