force-app/main/default/objects/Policy_Lawyer__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This checkbox is for the lawyer to be added in the Policy Calculations, if this checkbox is true then the lawyer is bound in the Policy.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>