force-app/main/default/objects/Policy_Lawyer__c/fields/ADJ_MOD__c.field-meta.xml
<CustomField>
    <fullName>ADJ_MOD__c</fullName>
    <label>ADJ. MOD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>