force-app/main/default/objects/Policy_Lawyer__c/fields/ARDC_ISBA_Contribution_Balance__c.field-meta.xml
<CustomField>
    <fullName>ARDC_ISBA_Contribution_Balance__c</fullName>
    <formula>ARDC_ISBA_Contribution_Limit_for_Lawyer__c -
  ARDC_ISBA_Contribution_Consumed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARDC ISBA Contribution Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>