force-app/main/default/objects/Policy_Lawyer__c/fields/ARDC_ISBA_Contribution_Limit_for_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>ARDC_ISBA_Contribution_Limit_for_Lawyer__c</fullName>
    <label>ARDC ISBA Contribution Limit for Lawyer</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>