force-app/main/default/objects/Policy_Lawyer__c/fields/ARDC_ISBA_First_Payment_Balance__c.field-meta.xml
<CustomField>
    <fullName>ARDC_ISBA_First_Payment_Balance__c</fullName>
    <formula>ARDC_ISBA_First_Payment_Limit__c -
 ARDC_ISBA_First_Payment_Consumed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARDC ISBA First Payment Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>