force-app/main/default/objects/Policy_Lawyer__c/fields/ARDC_ISBA_First_Payment_Consumed__c.field-meta.xml
<CustomField>
    <fullName>ARDC_ISBA_First_Payment_Consumed__c</fullName>
    <label>ARDC ISBA First Payment Consumed</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>