force-app/main/default/objects/Policy_Lawyer__c/fields/ARDC_Number__c.field-meta.xml
<CustomField>
    <fullName>ARDC_Number__c</fullName>
    <formula>Lawyer__r.Contact__r.ARDC_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARDC Number</label>
    <type>Text</type>
</CustomField>