force-app/main/default/objects/Policy_Lawyer__c/fields/ARDCNumber__c.field-meta.xml
<CustomField>
    <fullName>ARDCNumber__c</fullName>
    <label>ARDC Number(Don&apos;t Use)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>