force-app/main/default/objects/Policy_Lawyer__c/fields/Average_Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Average_Hours_Per_Week__c</fullName>
    <label>Average Hours Per Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>