force-app/main/default/objects/Policy_Lawyer__c/fields/Birthday_from_Contact__c.field-meta.xml
<CustomField>
    <fullName>Birthday_from_Contact__c</fullName>
    <formula>Lawyer__r.Contact__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday (from Contact)</label>
    <type>Date</type>
</CustomField>