force-app/main/default/objects/Policy_Lawyer__c/fields/CLE_Credit__c.field-meta.xml
<CustomField>
    <fullName>CLE_Credit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CLE Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>