force-app/main/default/objects/Policy_Lawyer__c/fields/Deleted_Date__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Date__c</fullName>
    <description>If the lawyer is deleted by Delete Lawyer Endorsement, then this date will be set with the Endorsement Effective Date.</description>
    <label>Deleted Date</label>
    <type>Date</type>
</CustomField>