force-app/main/default/objects/Policy_Lawyer__c/fields/Deleted_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Lawyer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the lawyer is deleted by Delete Lawyer Endorsement then this check will set to true.</description>
    <label>Deleted Lawyer</label>
    <type>Checkbox</type>
</CustomField>