force-app/main/default/objects/Policy_Lawyer__c/fields/Firm_Id__c.field-meta.xml
<CustomField>
    <fullName>Firm_Id__c</fullName>
    <formula>Account__r.AccountNumber</formula>
    <label>Firm Id</label>
    <type>Text</type>
</CustomField>