force-app/main/default/objects/Policy_Lawyer__c/fields/First_Name_Contact__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Contact__c</fullName>
    <description>First Name from Contact Record</description>
    <formula>Lawyer__r.Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name (Contact)</label>
    <type>Text</type>
</CustomField>