force-app/main/default/objects/Policy_Lawyer__c/fields/Full_Name_Contact__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Contact__c</fullName>
    <description>Full Name from Contact Record</description>
    <formula>Lawyer__r.Contact__r.Contact_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name (Contact)</label>
    <type>Text</type>
</CustomField>