force-app/main/default/objects/Policy_Lawyer__c/fields/Is_Added_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Is_Added_Lawyer__c</fullName>
    <formula>NOT(ISBLANK( Added_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Added Lawyer</label>
    <type>Checkbox</type>
</CustomField>