force-app/main/default/objects/Policy_Lawyer__c/fields/Is_Application_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Is_Application_Lawyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Application Lawyer</label>
    <type>Checkbox</type>
</CustomField>