force-app/main/default/objects/Policy_Lawyer__c/fields/Is_Deleted_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Is_Deleted_Lawyer__c</fullName>
    <formula>NOT(ISBLANK(Deleted_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Deleted Lawyer</label>
    <type>Checkbox</type>
</CustomField>