force-app/main/default/objects/Policy_Lawyer__c/fields/Is_Policy_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Policy_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Policy Created</label>
    <type>Checkbox</type>
</CustomField>