force-app/main/default/objects/Policy_Lawyer__c/fields/ISBA_Number__c.field-meta.xml
<CustomField>
    <fullName>ISBA_Number__c</fullName>
    <formula>Lawyer__r.Contact__r.ISBA__c</formula>
    <label>ISBA Number</label>
    <type>Text</type>
</CustomField>