force-app/main/default/objects/Policy_Lawyer__c/fields/Last_Name_Contact__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Contact__c</fullName>
    <description>Last Name from Contact Record</description>
    <formula>Lawyer__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name (Contact)</label>
    <type>Text</type>
</CustomField>