force-app/main/default/objects/Policy_Lawyer__c/fields/Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Lawyer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Lawyer</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>AccountContactJunction__c.Contact__r.Type__c</field>
            <operation>equals</operation>
            <value>Lawyer</value>
        </filterItems>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>AccountContactJunction__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AccountContactJunction__c</referenceTo>
    <relationshipLabel>Policy Lawyers</relationshipLabel>
    <relationshipName>Policy_Lawyers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>