force-app/main/default/objects/Policy_Lawyer__c/fields/Lawyer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Contact__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; + Lawyer__r.Contact__c ,Lawyer__r.Contact__r.FirstName &amp; &quot; &quot;  &amp; Lawyer__r.Contact__r.Middle_Name__c &amp; &quot; &quot; &amp;   Lawyer__r.Contact__r.LastName &amp; &quot; &quot; &amp;   Lawyer__r.Contact__r.Suffix__c,&quot;_self&quot;)</formula>
    <label>Lawyer</label>
    <type>Text</type>
</CustomField>