force-app/main/default/objects/Policy_Lawyer__c/fields/Lawyer_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Contact_Id__c</fullName>
    <formula>Lawyer__r.Contact__c</formula>
    <label>Lawyer Contact Id</label>
    <type>Text</type>
</CustomField>