force-app/main/default/objects/Policy_Lawyer__c/fields/Lawyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Name__c</fullName>
    <formula>Lawyer__r.Contact__r.FirstName &amp; &quot; &quot;  &amp; Lawyer__r.Contact__r.Middle_Name__c &amp; &quot; &quot; &amp;   Lawyer__r.Contact__r.LastName &amp; &quot; &quot; &amp;   Lawyer__r.Contact__r.Suffix__c</formula>
    <label>Lawyer Name</label>
    <type>Text</type>
</CustomField>