force-app/main/default/objects/Policy_Lawyer__c/fields/LEGACY_STEP__c.field-meta.xml
<CustomField>
    <fullName>LEGACY_STEP__c</fullName>
    <label>LEGACY STEP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>