force-app/main/default/objects/Policy_Lawyer__c/fields/Legacy_Step_Matched__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Step_Matched__c</fullName>
    <formula>Step__c = LEGACY_STEP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Step Matched ?</label>
    <type>Checkbox</type>
</CustomField>