force-app/main/default/objects/Policy_Lawyer__c/fields/Middle_Name_Contact__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name_Contact__c</fullName>
    <description>Middle Name from Contact Record</description>
    <formula>Lawyer__r.Contact__r.Middle_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Middle Name (Contact)</label>
    <type>Text</type>
</CustomField>