force-app/main/default/objects/Policy_Lawyer__c/fields/Mod_230__c.field-meta.xml
<CustomField>
    <fullName>Mod_230__c</fullName>
    <label>Mod 230 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>