force-app/main/default/objects/Policy_Lawyer__c/fields/Mod_234__c.field-meta.xml
<CustomField>
    <fullName>Mod_234__c</fullName>
    <label>Mod 234 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>