force-app/main/default/objects/Policy_Lawyer__c/fields/Old_10x10_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_10x10_Value__c</fullName>
    <label>Old 10x10 Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>