force-app/main/default/objects/Policy_Lawyer__c/fields/Old_Excess__c.field-meta.xml
<CustomField>
    <fullName>Old_Excess__c</fullName>
    <label>Old Excess</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>