force-app/main/default/objects/Policy_Lawyer__c/fields/Old_Premium__c.field-meta.xml
<CustomField>
    <fullName>Old_Premium__c</fullName>
    <label>Old Premium</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>