force-app/main/default/objects/Policy_Lawyer__c/fields/Old_Primary_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Primary_Value__c</fullName>
    <label>Old Primary Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>