force-app/main/default/objects/Policy_Lawyer__c/fields/Old_Prior_Act_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Prior_Act_Date__c</fullName>
    <label>Old Prior Act Date</label>
    <type>Date</type>
</CustomField>