force-app/main/default/objects/Policy_Lawyer__c/fields/Old_Step_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Step_Value__c</fullName>
    <label>Old Step Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>