force-app/main/default/objects/Policy_Lawyer__c/fields/Overriding_Step_Value__c.field-meta.xml
<CustomField>
    <fullName>Overriding_Step_Value__c</fullName>
    <inlineHelpText>Additional Step Value will be added to Calculated Step Rating.</inlineHelpText>
    <label>Additional Step Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>