force-app/main/default/objects/Policy_Lawyer__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Application/Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipName>Policy_Lawyers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>