force-app/main/default/objects/Policy_Lawyer__c/fields/Policy_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Expiration_Date__c</fullName>
    <formula>Policy__r.Expiration_Date__c</formula>
    <label>Policy Expiration Date</label>
    <type>Date</type>
</CustomField>