force-app/main/default/objects/Policy_Lawyer__c/fields/Policy_Lawyer_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Policy_Lawyer_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Policy Lawyer External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>