force-app/main/default/objects/Policy_Lawyer__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <formula>If( 
Or(ISNULL(Policy__r.Policy_Number__c),ISBLANK(Policy__r.Policy_Number__c)) , 
Policy__r.Name, 
Policy__r.Policy_Number__c)</formula>
    <label>Policy Number</label>
    <type>Text</type>
</CustomField>