force-app/main/default/objects/Policy_Lawyer__c/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <label>Premium</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>