force-app/main/default/objects/Policy_Lawyer__c/fields/Premium_Formula__c.field-meta.xml
<CustomField>
    <fullName>Premium_Formula__c</fullName>
    <formula>Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>