force-app/main/default/objects/Policy_Lawyer__c/fields/Prior_Act__c.field-meta.xml
<CustomField>
    <fullName>Prior_Act__c</fullName>
    <description>Years between expiration date and prior acts date (rounding at .5)</description>
    <formula>CEILING((Policy__r.Expiration_Date__c -  Prior_Act_Date__c ) / 365.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior Acts Interval (years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>