force-app/main/default/objects/Policy_Lawyer__c/fields/Rate_At__c.field-meta.xml
<CustomField>
    <fullName>Rate_At__c</fullName>
    <label>Rate At (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>