force-app/main/default/objects/Policy_Lawyer__c/fields/StateBarNumber__c.field-meta.xml
<CustomField>
    <fullName>StateBarNumber__c</fullName>
    <label>StateBarNumber</label>
    <length>200</length>
    <type>Text</type>
</CustomField>