force-app/main/default/objects/Policy_Lawyer__c/fields/X10_10__c.field-meta.xml
<CustomField>
    <fullName>X10_10__c</fullName>
    <label>10x10</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>