force-app/main/default/objects/Policy_Lawyer__c/fields/X5_5__c.field-meta.xml
<CustomField>
    <fullName>X5_5__c</fullName>
    <label>5x5</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>